# rws

./: .gitignore  Cargo.toml  README.md
rws-client/: Cargo.toml
rws-client/src/: app.rs  cli.rs  client.rs  main.rs  ui.rs
rws-common/: Cargo.toml
rws-common/src/: lib.rs
rws-core/: Cargo.toml
rws-core/src/: client.rs  lib.rs  room.rs  server.rs
rws-server/: Cargo.toml
rws-server/src/: client.rs  dispatcher.rs  handler.rs  lib.rs  main.rs  room.rs
rws-server/src/handler/: mod.rs  room_handler.rs
rws-server/src/util/: broadcast.rs  mod.rs
