[package]
name = "rws-client"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.20"
tungstenite = "0.20"
futures-util = "0.3"
url = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rws-common = { path = "../rws-common" }